infra-helm/storage/longhorn/longhorn-ingress-app.yaml
# infra-helm/storage/longhorn/longhorn-ingress-app.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-tailscale-ingress
  namespace: longhorn
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
  - hosts:
    - longhorn
